# rust-scala-jni

./: .gitignore  Makefile  README.md
sparse4s/: build.sbt
sparse4s/project/: Dependencies.scala  Generators.scala  build.sbt
sparse4s/src/main/scala/sparse4s/: GrB.scala
sparse4s/src/native/: CMakeLists.txt
sparse4s/src/test/scala/sparse4s/: GrBSpec.scala
sparse_mat/: Cargo.toml  build.rs  sparse4s_GrB.h  sparse4s_GrBType.h
sparse_mat/src/: lib.rs
